--- a/FacebookHelperSample/FacebookHelperSample/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/FacebookHelperSample/FacebookHelperSample/en.lproj/MainStoryboard_iPhone.storyboard
@@ -49,6 +49,22 @@
                                     <action selector="doFacebookPost:" destination="t2H-sz-mm3" eventType="touchUpInside" id="wx1-Rb-d5x"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="nb5-JW-SIz">
+                                <rect key="frame" x="73" y="239" width="175" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Do Facebook Logout">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="doFacebookLogout:" destination="t2H-sz-mm3" eventType="touchUpInside" id="eRq-MR-iQV"/>
+                                    <action selector="doFacebookPost:" destination="t2H-sz-mm3" eventType="touchUpInside" id="6Jt-Jc-Opp"/>
+                                </connections>
+                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="center" id="iqg-do-pwp">
                                 <rect key="frame" x="40" y="40" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -121,24 +137,6 @@
             <point key="canvasLocation" x="853" y="79"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="FacebookDialogViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/FacebookDialogViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="cancelButtonTouched:"/>
-                <relationship kind="action" name="postButtonTouched:"/>
-                <relationship kind="outlet" name="textView" candidateClass="UITextView"/>
-            </relationships>
-        </class>
-        <class className="MasterViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MasterViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="doFacebookPost:"/>
-                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
-                <relationship kind="outlet" name="label" candidateClass="UILabel"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
